Use Java 17 child output reader